--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,13 +22,14 @@
     android:layout_height="wrap_content"
     />
 
-    <ImageView
+   <!--- <ImageView
         android:id="@+id/thumbnailIcon"
         android:layout_below="@+id/cityText"
         android:layout_marginTop="10dp"
         android:background="#fff"
         android:layout_width="100dp"
         android:layout_height="100dp" />
+        -->
 
     <TextView
         android:id="@+id/tempText"
@@ -48,7 +49,7 @@
         android:textColor="#fff"
         android:textSize="16sp"
         android:text="Wind"
-        android:layout_below="@id/thumbnailIcon"
+        android:layout_below="@id/tempText"
         android:layout_marginTop="35dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
@@ -102,7 +103,7 @@
 
     <TextView
         android:id="@+id/updateText"
-        android:textSize="16sp"
+        android:textSize="14sp"
         android:layout_marginTop="5dp"
         android:layout_centerHorizontal="true"
         android:textColor="#fff"
